# stewardai

./: .env.example  .gitignore  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.claude/skills/composio/: SKILL.md
.github/workflows/: deploy-agent.yml
deploy/systemd/: stewardai-mux.service  stewardai-scheduler.service  stewardai-web.service  stewardai-worker.service
docs/: RUNBOOK-vexa-meeting.md  deploy-gpu.md  deploy-hetzner.md  portal-v1-MORNING-REPORT.md  turn-taking-architecture.md
docs/plans/: 2026-06-27-implementation-plan-v2.md  2026-06-27-stewardai-voice-core.md  v1-spike-issues.md
docs/specs/: 2026-06-26-stewardai-voice-core-design.md
docs/superpowers/plans/: 2026-06-28-vexa-agent-integration.md  2026-06-29-meeting-intelligence-eval.md  2026-06-30-portal-v1.md  2026-07-02-auth-hardening.md  2026-07-02-meeting-timeline.md  2026-07-02-recurring-series.md  2026-07-03-agentic-chat-c1-agent-core.md  2026-07-03-connected-apps-directory.md  2026-07-03-kb-plan-a1-spaces-filing-backend.md  2026-07-03-kb-plan-a2-spaces-portal-ui.md  2026-07-03-kb-plan-b-index-ask-rag.md  2026-07-04-agentic-chat-c2-actions-permissions.md  2026-07-04-agentic-chat-c3-portal-ui.md  2026-07-04-integration-registry.md  2026-07-04-usage-logging.md  2026-07-09-circleback-redesign.md  2026-07-13-stewardai-visual-redesign.md  2026-07-15-dedup-fanout.md  2026-07-15-email-system-foundation.md  2026-07-16-refresh-token-encryption.md
docs/superpowers/specs/: 2026-06-28-vexa-integration-design.md  2026-06-29-meeting-intelligence-eval-design.md  2026-06-30-portal-v1-design.md  2026-07-02-auth-hardening-design.md  2026-07-02-meeting-timeline-design.md  2026-07-02-recurring-series-design.md  2026-07-03-agentic-chat-design.md  2026-07-03-connected-apps-directory-design.md  2026-07-03-steward-knowledge-base-design.md  2026-07-04-integration-registry-design.md  2026-07-04-usage-logging-design.md  2026-07-09-circleback-redesign-design.md  2026-07-09-kb-l3-living-brief-design.md  2026-07-13-stewardai-visual-redesign-design.md  2026-07-15-dedup-fanout-design.md  2026-07-15-email-system-design.md  2026-07-16-refresh-token-encryption-design.md  2026-07-21-meeting-wake-gating-design.md
evals/: __init__.py  e2e_eval.py  run.py  stt_eval.py  tts_eval.py
evals/datasets/: README.md  __init__.py
evals/meetings/: sprint_planning.expected.json
portal/: .env.example  .vade-report  jest.config.ts  package-lock.json  package.json  tailwind.config.ts
portal/docs/: auth-audit.md
portal/scripts/: fetch-design-fonts.sh
portal/src/: middleware.ts
portal/supabase/: config.toml
scripts/: chat_act_smoke.py  chat_smoke.py  deploy.sh  generate_meeting_audio.py  gpu_env.sh  gpu_up.sh  install-systemd.sh  meeting_stats.py  run-agent.sh  run-web.sh  run_gpu.sh  run_local.sh  run_meeting.sh  score_meeting.py  seed_kb_test_meeting.py  setup.sh  setup_gpu.sh  stewardai-scheduler.service  turn_latency.py  turn_timings.py
src/stewardai/: __init__.py  config.py  factory.py  interfaces.py
tests/: conftest.py  test_audio.py  test_config.py  test_factory.py  test_logging.py  test_score_meeting.py
tests/agent/: conftest.py  fake_bot.py  test_action_link.py  test_actions.py  test_assembly.py  test_decide_node.py  test_deepgram_speaker_transcriber.py  test_fanout.py  test_filler_tts.py  test_live_tools.py  test_llm_error_fallback.py  test_meeting_agent.py  test_meeting_loop.py  test_meeting_system_prompt.py  test_meeting_wake_prompt.py  test_multiplexer.py  test_native_tools.py  test_participant_image_retry.py  test_per_speaker_transcriber.py  test_persistence.py  test_reply_sanitizer.py  test_resolve_participant_image.py  test_runner_fanout_wiring.py  test_speaker_tap_filter.py  test_summary.py  test_supabase_writer.py  test_tool_turn.py  test_transcript_labels.py  test_transcript_persistence.py
tests/bridge/: test_frame_server_send.py  test_multiplex_transport.py  test_output.py  test_segment_hooks.py  test_speaker_events.py  test_transport.py  test_vexa_client.py  test_vexa_control.py
tests/email/: test_bot_failed_enqueue.py  test_config_email.py  test_keys.py  test_meeting_notes_enqueue.py  test_outbox.py  test_resend_client.py  test_sender.py  test_suppressions.py  test_templates.py
tests/evals/: test_evals.py
tests/integrations/: test_composio_service.py
tests/llm/: test_decide.py  test_llm_litellm.py  test_llm_stub.py  test_warmup.py
tests/observability/: test_usage_context.py  test_usage_logger.py
tests/scheduler/: test_action_worker.py  test_calendar_sync.py  test_dedup_migration.py  test_meeting_grouping.py  test_meeting_scheduler.py  test_reconcile.py  test_worker.py
tests/stt/: test_parakeet.py  test_stt_stub.py
tests/tts/: test_kokoro.py  test_tts_stub.py
tests/turn/: test_endpointer.py
tests/web/: test_app.py  test_ask_api.py  test_chat_ws.py  test_demo_gate.py
vexa-patch/: README.md  forwarder.ts  zoom_tap.md
vexa-patch/audioworklet/: pcm-worklet.js
web/: app.py  demo_auth.py  kb_auth.py
web/static/: app.js  index.html  pipeline.html  stt.html  style.css  tts.html
(+367 files in other folders)
