[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stewardai"
version = "0.1.0"
description = "StewardAI — voice-driven personal AI assistant (Phase 1: meeting voice core)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
    "jiwer>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Real backends. Install ONE of cpu/cuda on the target box.
# torch for cuda must come from the CUDA index; see scripts/setup.sh.
cpu = [
    "torch>=2.2",
    "onnxruntime>=1.17",
    "nemo_toolkit[asr]>=2.0",
    "kokoro>=0.7",
    "livekit-agents>=1.0",
    "livekit-plugins-silero>=1.0",
    "livekit-plugins-turn-detector>=1.0",
]
cuda = [
    "torch>=2.2",
    "onnxruntime-gpu>=1.17",
    "nemo_toolkit[asr]>=2.0",
    "kokoro>=0.7",
    "livekit-agents>=1.0",
    "livekit-plugins-silero>=1.0",
    "livekit-plugins-turn-detector>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stewardai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "heavy: requires heavy ML deps (torch/nemo/kokoro/livekit); skipped unless installed",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "web", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
