[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stewardai"
version = "0.1.0"
description = "StewardAI — voice-driven personal AI assistant (Phase 1: meeting voice core)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "structlog>=24.1",
    "numpy>=1.26",
    "soundfile>=0.12",
    "litellm>=1.40",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "httpx>=0.27",
    "jiwer>=3.0",
    "supabase>=2.7",
    "composio==0.17.1",
    "langgraph>=0.2",
    "langchain-litellm",
    "langchain-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
# Real backends. Install ONE of cpu/cuda on the target box.
# torch for cuda must come from the CUDA index; see scripts/setup_gpu.sh.
# v1 STT = faster-whisper (clean deps). Parakeet/NeMo is a separate extra because
# its deps are heavy + invasive (numpy downgrade) — install only when using it.
cpu = [
    "torch>=2.2",
    "onnxruntime>=1.17",
    "faster-whisper>=1.0",
    "piper-tts>=1.0",
    "kokoro>=0.7",
    "livekit-agents>=1.0",
    "livekit-plugins-silero>=1.0",
    "livekit-plugins-turn-detector>=1.0",
    "redis>=5",
]
cuda = [
    "torch>=2.2",
    # VAD + turn-detector are tiny ONNX models — keep them on CPU onnxruntime to
    # avoid cuDNN version conflicts with CTranslate2 (and free the GPU for STT/TTS).
    "onnxruntime>=1.17",
    "faster-whisper>=1.0",
    "piper-tts>=1.0",
    "kokoro>=0.7",
    "livekit-agents>=1.0",
    "livekit-plugins-silero>=1.0",
    "livekit-plugins-turn-detector>=1.0",
    "redis>=5",
    # CTranslate2 (faster-whisper) GPU runtime libs — pin so it doesn't fall back to
    # a mismatched system cuDNN. CTranslate2 4.x needs cuDNN 9 for CUDA 12.
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12>=9,<10",
]
# Parakeet STT (NeMo). Heavy + invasive deps; v2 isolates this in its own image.
parakeet = [
    "nemo_toolkit[asr]>=2.0",
]
# Chatterbox TTS (Resemble AI, MIT). Most natural open TTS; own extra to keep its
# deps from perturbing the cpu/cuda set (install alongside cuda when A/B-ing TTS).
chatterbox = [
    "chatterbox-tts>=0.1",
]
# Cloud STT/TTS plugins for the no-GPU deployment (STT_BACKEND=deepgram,
# TTS_BACKEND=deepgram or cartesia). Kept OUT of cpu/cuda because those default to
# LOCAL whisper/kokoro; install alongside a base extra for the cheap CPU + cloud-API
# box:  pip install -e '.[cpu,cloud]'
cloud = [
    "livekit-plugins-deepgram>=1.0",
    "livekit-plugins-cartesia>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/stewardai"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "heavy: requires heavy ML deps (torch/nemo/kokoro/livekit); skipped unless installed",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "web", "evals"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = false
